force-app/main/default/objects/EEO_Detail__c/fields/NamesJobCategoryFavorablyTreated__c.field-meta.xml
<CustomField>
    <fullName>NamesJobCategoryFavorablyTreated__c</fullName>
    <label>Names, Job, Category - Favorably Treated</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>