force-app/main/default/objects/EEO_Detail__c/fields/National_Origin__c.field-meta.xml
<CustomField>
    <fullName>National_Origin__c</fullName>
    <label>National Origin</label>
    <picklist>
        <picklistValues>
            <fullName>United States</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Afghanistan</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Albania</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Algeria</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Andorra</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Angola</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Antigua and Barbuda</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Argentina</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Armenia</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Australia</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Austria</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Azerbaijan</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Bahamas</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Bahrain</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Bangladesh</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Barbados</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Belarus</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Belgium</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Belize</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Benin</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Bhutan</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Bolivia</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Bosnia and Herzegovina</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Botswana</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Brazil</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Brunei</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Bulgaria</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Burkina Faso</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Burma (Myanmar)</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Burundi</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>