force-app/main/default/objects/EEO_Detail__c/fields/NationalOriginIfOther__c.field-meta.xml
<CustomField>
    <fullName>NationalOriginIfOther__c</fullName>
    <label>National Origin If Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>