force-app/main/default/objects/EEO_Detail__c/fields/NatureofRelationships__c.field-meta.xml
<CustomField>
    <fullName>NatureofRelationships__c</fullName>
    <label>Nature of Relationship(s)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>