force-app/main/default/objects/EEO_Detail__c/fields/Non_CCHHS_Employee_Who_Filed_Charges__c.field-meta.xml
<CustomField>
    <fullName>Non_CCHHS_Employee_Who_Filed_Charges__c</fullName>
    <label>Non-CCHHS Employee Who Filed Charges</label>
    <length>120</length>
    <type>Text</type>
</CustomField>