force-app/main/default/objects/EEO_Detail__c/fields/Not_Substantiated_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Not_Substantiated_Explanation__c</fullName>
    <label>Unsubstantiated Explanation</label>
    <length>200</length>
    <type>Text</type>
</CustomField>