force-app/main/default/objects/EEO_Detail__c/fields/Order_of_Protection_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_of_Protection_Status__c</fullName>
    <label>Order of Protection Status</label>
    <picklist>
        <picklistValues>
            <fullName>TBD</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>