force-app/main/default/objects/EEO_Detail__c/fields/OrderofProtectionStatusIfOther__c.field-meta.xml
<CustomField>
    <fullName>OrderofProtectionStatusIfOther__c</fullName>
    <label>Order of Protection Status If Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>