force-app/main/default/objects/EEO_Detail__c/fields/OtherActionTaken__c.field-meta.xml
<CustomField>
    <fullName>OtherActionTaken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Action Taken</label>
    <type>Checkbox</type>
</CustomField>