force-app/main/default/objects/EEO_Detail__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>