force-app/main/default/objects/EEO_Detail__c/fields/PartiesInvolved__c.field-meta.xml
<CustomField>
    <fullName>PartiesInvolved__c</fullName>
    <label>Parties Involved</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>