force-app/main/default/objects/EEO_Detail__c/fields/PartiesInvolvedResponse__c.field-meta.xml
<CustomField>
    <fullName>PartiesInvolvedResponse__c</fullName>
    <label>Parties Involved Response</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>