force-app/main/default/objects/EEO_Detail__c/fields/PositionStatementDateSubmitted__c.field-meta.xml
<CustomField>
    <fullName>PositionStatementDateSubmitted__c</fullName>
    <label>Position Statement Date Submitted</label>
    <type>Date</type>
</CustomField>