force-app/main/default/objects/EEO_Detail__c/fields/PositionStatementDueDate__c.field-meta.xml
<CustomField>
    <fullName>PositionStatementDueDate__c</fullName>
    <label>Position Statement Due Date</label>
    <type>Date</type>
</CustomField>