force-app/main/default/objects/EEO_Detail__c/fields/Preferred_Time_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Time_to_Contact__c</fullName>
    <label>Preferred Time to Contact</label>
    <picklist>
        <picklistValues>
            <fullName>Morning (7:00-11:59am)</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Afternoon  (12:00-3:59pm)</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Evening (4:00-7:00pm)</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>TBD</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>