force-app/main/default/objects/EEO_Detail__c/fields/Previously_Reported_to_Management__c.field-meta.xml
<CustomField>
    <fullName>Previously_Reported_to_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previously Reported to Management</label>
    <type>Checkbox</type>
</CustomField>