force-app/main/default/objects/EEO_Detail__c/fields/PreviouslyReportedIncident__c.field-meta.xml
<CustomField>
    <fullName>PreviouslyReportedIncident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previously Reported Incident</label>
    <type>Checkbox</type>
</CustomField>