force-app/main/default/objects/EEO_Detail__c/fields/Primary_External_Agency__c.field-meta.xml
<CustomField>
    <fullName>Primary_External_Agency__c</fullName>
    <label>Primary External Agency</label>
    <picklist>
        <picklistValues>
            <fullName>IDHR</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>EEOC</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>TBD</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>