force-app/main/default/objects/EEO_Detail__c/fields/Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone__c</fullName>
    <formula>Case__r.Contact.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Phone</label>
    <type>Text</type>
</CustomField>