force-app/main/default/objects/EEO_Detail__c/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <label>Race</label>
    <picklist>
        <picklistValues>
            <fullName>Black</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>White</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Hispanic</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Asia or Pacific Islander</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>American Indian or Alaskan Native</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Other</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>TBD</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>