force-app/main/default/objects/EEO_Detail__c/fields/RaceIfOther__c.field-meta.xml
<CustomField>
    <fullName>RaceIfOther__c</fullName>
    <label>Race If Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>