force-app/main/default/objects/EEO_Detail__c/fields/Reason_Rec_Was_Not_Followed_if_Other__c.field-meta.xml
<CustomField>
    <fullName>Reason_Rec_Was_Not_Followed_if_Other__c</fullName>
    <label>Reason Rec. Was Not Followed, if Other</label>
    <type>TextArea</type>
</CustomField>