force-app/main/default/objects/EEO_Detail__c/fields/Reason_Recommendation_Was_Not_Followed__c.field-meta.xml
<CustomField>
    <fullName>Reason_Recommendation_Was_Not_Followed__c</fullName>
    <label>Reason Recommendation Was Not Followed</label>
    <picklist>
        <picklistValues>
            <fullName>Forgot</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Disagreed with recommendation</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Recommendation not feasible</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Lack of resources</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Misunderstood recommendation</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Other</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>TBD</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>