force-app/main/default/objects/EEO_Detail__c/fields/RecommendationWasNotFollowed__c.field-meta.xml
<CustomField>
    <fullName>RecommendationWasNotFollowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recommendation Was Not Followed</label>
    <type>Checkbox</type>
</CustomField>