force-app/main/default/objects/EEO_Detail__c/fields/Religion__c.field-meta.xml
<CustomField>
    <fullName>Religion__c</fullName>
    <label>Religion</label>
    <picklist>
        <picklistValues>
            <fullName>Apostolic/New Apostolic</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Assemblies of God</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Baptist</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Born Again</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Buddhism</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Catholic</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Christian - No denomination supplied</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Christian Reform</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Christian Science</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Church of God</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Church of the Brethren</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Church of the Nazarene</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Churches of Christ</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Congregational/United Church of Christ</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Disciples of Christ</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Episcopalian/Anglican</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Evangelical</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Foursquare Gospel</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Full Gospel</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Fundamentalist</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Hinduism</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Holiness/Holy</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Independent Christian Church</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Islam</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Jehovah&apos;s Witness</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Judaism</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Lutheran</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Mennonite</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Methodist / Wesleyan</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Mormon / Latter-Day Saints</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>