force-app/main/default/objects/EEO_Detail__c/fields/ReligionIfOther__c.field-meta.xml
<CustomField>
    <fullName>ReligionIfOther__c</fullName>
    <label>Religion If Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>