force-app/main/default/objects/EEO_Detail__c/fields/Reported_To_Response__c.field-meta.xml
<CustomField>
    <fullName>Reported_To_Response__c</fullName>
    <label>Reported To Response</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>