force-app/main/default/objects/EEO_Detail__c/fields/ReportUploaded__c.field-meta.xml
<CustomField>
    <fullName>ReportUploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report Uploaded</label>
    <type>Checkbox</type>
</CustomField>