force-app/main/default/objects/EEO_Detail__c/fields/ResolutionRecommendation__c.field-meta.xml
<CustomField>
    <fullName>ResolutionRecommendation__c</fullName>
    <label>Resolution Recommendation</label>
    <length>200</length>
    <type>Text</type>
</CustomField>