force-app/main/default/objects/EEO_Detail__c/fields/ResolutionSubstantiated__c.field-meta.xml
<CustomField>
    <fullName>ResolutionSubstantiated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resolution Substantiated?</label>
    <type>Checkbox</type>
</CustomField>