force-app/main/default/objects/EEO_Detail__c/fields/Respondant__c.field-meta.xml
<CustomField>
    <fullName>Respondant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Respondant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>EEO Details</relationshipLabel>
    <relationshipName>EEO_Details</relationshipName>
    <type>Lookup</type>
</CustomField>