force-app/main/default/objects/EEO_Detail__c/fields/ResponseUploaded__c.field-meta.xml
<CustomField>
    <fullName>ResponseUploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Response Uploaded</label>
    <type>Checkbox</type>
</CustomField>