force-app/main/default/objects/EEO_Detail__c/fields/Responsible_Non_Union_Leadership__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Non_Union_Leadership__c</fullName>
    <label>Responsible Non-Union Leadership</label>
    <length>200</length>
    <type>Text</type>
</CustomField>