force-app/main/default/objects/EEO_Detail__c/fields/ResponsibleNonUnionLeadership__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleNonUnionLeadership__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Responsible Non-Union Leadership</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>EEO Details (Responsible Non-Union Leadership)</relationshipLabel>
    <relationshipName>Responsible_Non_Union_Leaderships</relationshipName>
    <type>Lookup</type>
</CustomField>