force-app/main/default/objects/EEO_Detail__c/fields/Retaliation__c.field-meta.xml
<CustomField>
    <fullName>Retaliation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retaliation</label>
    <type>Checkbox</type>
</CustomField>