force-app/main/default/objects/EEO_Detail__c/fields/Retaliation_if_Other__c.field-meta.xml
<CustomField>
    <fullName>Retaliation_if_Other__c</fullName>
    <label>Retaliation, if Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>