force-app/main/default/objects/EEO_Detail__c/fields/Retaliation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Retaliation_Reason__c</fullName>
    <label>Retaliation Reason</label>
    <picklist>
        <picklistValues>
            <fullName>Filing a complaint</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Opposing a discriminatory practice</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>A witness in anti-discrimination proceeding</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Acting as a whistleblower</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>