force-app/main/default/objects/EEO_Detail__c/fields/Sex__c.field-meta.xml
<CustomField>
    <fullName>Sex__c</fullName>
    <label>Sex</label>
    <picklist>
        <picklistValues>
            <fullName>Male</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Female</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Other</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>TBD</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>