force-app/main/default/objects/EEO_Detail__c/fields/SexIfOther__c.field-meta.xml
<CustomField>
    <fullName>SexIfOther__c</fullName>
    <label>Sex If Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>