force-app/main/default/objects/EEO_Detail__c/fields/Sexual_Harassment__c.field-meta.xml
<CustomField>
    <fullName>Sexual_Harassment__c</fullName>
    <label>Sexual Harassment</label>
    <picklist>
        <picklistValues>
            <fullName>TBD</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>