force-app/main/default/objects/EEO_Detail__c/fields/Sexual_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Sexual_Orientation__c</fullName>
    <label>Sexual Orientation</label>
    <picklist>
        <picklistValues>
            <fullName>Heterosexuality</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Homosexuality</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Bi- Sexuality</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Gender-Related Identity</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Other</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>TBD</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>