force-app/main/default/objects/EEO_Detail__c/fields/SexualHarassmentIfOther__c.field-meta.xml
<CustomField>
    <fullName>SexualHarassmentIfOther__c</fullName>
    <label>Sexual Harassment If Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>