force-app/main/default/objects/EEO_Detail__c/fields/SexualOrientationIfOther__c.field-meta.xml
<CustomField>
    <fullName>SexualOrientationIfOther__c</fullName>
    <label>Sexual Orientation If Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>