force-app/main/default/objects/EEO_Detail__c/fields/Similarly_Treated_Individuals__c.field-meta.xml
<CustomField>
    <fullName>Similarly_Treated_Individuals__c</fullName>
    <label>Similarly Treated Individuals</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>