force-app/main/default/objects/EEO_Detail__c/fields/WasRecommendationFollowed__c.field-meta.xml
<CustomField>
    <fullName>WasRecommendationFollowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was Recommendation Followed?</label>
    <type>Checkbox</type>
</CustomField>