force-app/main/default/objects/EEO_Detail__c/fields/WhatOccurred__c.field-meta.xml
<CustomField>
    <fullName>WhatOccurred__c</fullName>
    <label>What Occurred</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>