force-app/main/default/objects/EEO_Detail__c/fields/WhendidLeaveBegin__c.field-meta.xml
<CustomField>
    <fullName>WhendidLeaveBegin__c</fullName>
    <label>When did Leave Begin?</label>
    <type>Date</type>
</CustomField>