force-app/main/default/objects/EEO_Detail__c/fields/Why_Substantiated__c.field-meta.xml
<CustomField>
    <fullName>Why_Substantiated__c</fullName>
    <label>Why Substantiated?</label>
    <picklist>
        <picklistValues>
            <fullName>Partially Substantianted</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Fully Substantianted</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>