force-app/main/default/objects/EEO_Detail__c/fields/Why_Unsubstantiated__c.field-meta.xml
<CustomField>
    <fullName>Why_Unsubstantiated__c</fullName>
    <label>Why Unsubstantiated?</label>
    <picklist>
        <picklistValues>
            <fullName>Insufficient evidence to support the claim</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Fradulant case</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Non-EEO matter</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>