force-app/main/default/objects/EEO_Detail__c/fields/Witnesses__c.field-meta.xml
<CustomField>
    <fullName>Witnesses__c</fullName>
    <label>Witnesses</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>