force-app/main/default/objects/EEO_Detail__c/fields/WorkplaceViolenceExplanation__c.field-meta.xml
<CustomField>
    <fullName>WorkplaceViolenceExplanation__c</fullName>
    <label>Workplace Violence Explanation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>