force-app/main/default/objects/EEO_Detail__c/recordTypes/External_CCHHS_EEO.recordType-meta.xml
<RecordType>
    <fullName>External_CCHHS_EEO</fullName>
    <active>true</active>
    <label>External Cook County Health EEO</label>
</RecordType>