force-app/main/default/objects/EEO_Detail__c/recordTypes/Internal_CCHHS_EEO.recordType-meta.xml
<RecordType>
    <fullName>Internal_CCHHS_EEO</fullName>
    <active>true</active>
    <label>Harassment / Discrimination / Retaliation</label>
</RecordType>