force-app/main/default/objects/EEO_Detail__c/recordTypes/Workplace_Violence.recordType-meta.xml
<RecordType>
    <fullName>Workplace_Violence</fullName>
    <active>true</active>
    <label>Workplace Violence</label>
</RecordType>