force-app/main/default/objects/EEO_Detail__c/validationRules/Case_not_valid_needs_a_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_not_valid_needs_a_reason</fullName>
    <active>true</active>
    <description>When a case is not valid, the user needs to provide a reason</description>
    <errorConditionFormula>AND(
  IsNotSubstantiated__c,
  ISBLANK(Explanation_Why_Case_Is_Not_Valid__c)
)</errorConditionFormula>
    <errorDisplayField>Explanation_Why_Case_Is_Not_Valid__c</errorDisplayField>
    <errorMessage>Provide a reason why this case is not substantiated</errorMessage>
</ValidationRule>