force-app/main/default/objects/EEO_Detail__c/validationRules/Comp_on_admin_leave_need_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Comp_on_admin_leave_need_date</fullName>
    <active>true</active>
    <description>If the complainant is on administrative leave, the user must provide a date when that leave started</description>
    <errorConditionFormula>AND(
  ComplainantIsOnAdministrativeLeave__c,
  WhendidLeaveBegin__c == null
)</errorConditionFormula>
    <errorDisplayField>WhendidLeaveBegin__c</errorDisplayField>
    <errorMessage>Provide a date when leave began</errorMessage>
</ValidationRule>