force-app/main/default/objects/EEO_Detail__c/validationRules/Finding_Not_Substantiated_Explanation.validationRule-meta.xml
<ValidationRule>
    <fullName>Finding_Not_Substantiated_Explanation</fullName>
    <active>true</active>
    <description>If the finding is not substantiated, there needs to be an explanation</description>
    <errorConditionFormula>ISPICKVAL(Finding_Field__c,&quot;Not Substantiated&quot;)</errorConditionFormula>
    <errorDisplayField>Not_Substantiated_Explanation__c</errorDisplayField>
    <errorMessage>Not substantiated requires an explanation</errorMessage>
</ValidationRule>