force-app/main/default/objects/EEO_Detail__c/validationRules/Rec_Not_Followed_need_a_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Rec_Not_Followed_need_a_reason</fullName>
    <active>true</active>
    <description>If the recommendation is not followed, the user needs to provide a reason</description>
    <errorConditionFormula>AND(
  RecommendationWasNotFollowed__c,
  ISBLANK(TEXT(Reason_Recommendation_Was_Not_Followed__c))
)</errorConditionFormula>
    <errorDisplayField>Reason_Recommendation_Was_Not_Followed__c</errorDisplayField>
    <errorMessage>Provide a reason why the recommendation was not followed</errorMessage>
</ValidationRule>